syntax = "proto3";

import "google/protobuf/empty.proto";

package users;
option go_package = "./pb";

service UsersService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn(SignInRequest) returns (SignInResponse) {}
  rpc CheckHealth(google.protobuf.Empty) returns (CheckHealthResponse) {}
}

message SignUpRequest {
  bytes json = 1;
}

message SignUpResponse {
  int64 user_id = 1;
  int32 status = 2;
}

message SignInRequest {
  bytes json = 1;
}

message SignInResponse {
  int64 user_id = 1;
  int32 status = 2;
}

// less is better
message CheckHealthResponse {
  float health = 1;
} 